--- a/static/style/product.css
+++ b/static/style/product.css
@@ -125,3 +125,41 @@ body {
     color: var(--font-color2);
     margin-top: 5px;
 }
+@media (max-width: 768px) {
+    .container {
+        padding: 10px;
+    }
+    .box {
+        width: 100%;
+        padding: 15px;
+        margin-bottom: 15px;
+    }
+
+    .product-info {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product-info img {
+        width: 100px;
+        margin-bottom: 15px;
+    }
+    .text-container {
+        text-align: center;
+        padding-right: 0;
+    }
+    .btn {
+        font-size: 14px;
+    }
+    .comments-section {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .comment {
+        font-size: 12px;
+    }
+    .input, .input2 {
+        font-size: 14px;
+    }
+}
