--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/style/style.css">
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"
+  >
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
   <title>SAMSUNG</title>
 </head>
 
@@ -15,13 +20,13 @@
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="static/images/bg2.jpg" class="d-block bg-pic" alt="...">
+        <img src="{{ url_for('static', filename='images/bg2.jpg') }}" class="d-block bg-pic" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="static/images/bg6.jpg" class="d-block bg-pic" alt="...">
+        <img src="{{ url_for('static', filename='images/bg6.jpg') }}" class="d-block bg-pic" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="static/images/bg1.jpg" class="d-block bg-pic" alt="...">
+        <img src="{{ url_for('static', filename='images/bg1.jpg') }}" class="d-block bg-pic" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -34,16 +39,20 @@
     </button>
   </div>
 
-  <div class="container">
+  <div class="container mt-5">
     <div class="row justify-content-center">
       {% for product in products %}
       <div class="col-md-3 box">
-        <div class="product-box">
-          <img src="{{ url_for('static', filename='images/' + product.image) }}?v={{ now }}" alt="{{ product.name }}">
+        <div class="product-box text-center">
+          {% if product.image %}
+            <img src="{{ url_for('static', filename='images/' + product.image) }}?v={{ now }}" alt="{{ product.name }}" class="img-fluid mb-2">
+          {% else %}
+            <img src="{{ url_for('static', filename='images/default.jpg') }}" alt="No Image" class="img-fluid mb-2">
+          {% endif %}
           <h3>{{ product.name }}</h3>
           <p>{{ product.price }}$</p>
-          <p>stock: {{ product.stock }}</p>
-          <a href="/product/{{ product.id }}" class="btn btn-primary">Buy Now</a>
+          <p>موجودی: {{ product.stock }}</p>
+          <a href="/product/{{ product.id }}" class="btn btn-primary mt-2">خرید</a>
         </div>
       </div>
       {% endfor %}
@@ -51,8 +60,12 @@
   </div>
 
   {% include "footer.html" %}
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+  <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+    crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
